[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.1.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
[lib]
name="jwt"
path = "src/lib.rs"
crate-type = ["dylib"]
